--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "SharedCode/FileReferenceMacros"]
 	path = SharedCode/FileReferenceMacros
 	url = https://github.com/BlazesRus/FileReferenceMacros.git
+[submodule "SharedCode/XMLViewer"]
+	path = SharedCode/XMLViewer
+	url = https://github.com/BlazesRus/XMLViewer.git
