ignoring unfinished MFCDynMacros file

--- a/.gitignore
+++ b/.gitignore
@@ -221,3 +221,5 @@ SharedCode/MultiDocAppV2/
 SharedCode/MFCApp_September/
 
 SharedCode/MFCApp_SeptSDI/
+
+SharedCode/OtherFunctions/MFCDynMacros.h
